<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        app:srcCompat="@drawable/android_icon_2332747_960_720" />

    <EditText
        android:id="@+id/editTextNumberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="30"
        android:gravity="end"
        android:inputType="numberSigned"
        android:text="0"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:text="@string/_AC"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button_plus_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:text="@string/_plus_minus"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:text="@string/_percent"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button_divide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:text="@string/_divide"
            android:textSize="@dimen/key_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button"
            android:layout_margin="2sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button2"
            android:layout_margin="2sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button3"
            android:layout_margin="2sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_margin="2sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_multiply"
            android:textSize="@dimen/key_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_margin="2sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button5"
            android:layout_margin="2sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button6"
            android:layout_margin="2sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button_minus"
            android:layout_margin="2sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_minus"
            android:textSize="@dimen/key_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_margin="2sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button9"
            android:layout_margin="2sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button_plus"
            android:layout_margin="2sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_plus"
            android:textSize="@dimen/key_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button0"
            android:layout_margin="2sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/_0"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button_dot"
            android:layout_margin="2sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_dot"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button_equals"
            android:layout_margin="2sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_equals"
            android:textSize="@dimen/key_text_size" />
    </LinearLayout>

</LinearLayout>